--- a/style.css
+++ b/style.css
@@ -22,9 +22,15 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
+   
     width: 100vw;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-rows: 1fr 200px;
+    height: 100vh;
+
 }
 
 .mainText {
@@ -40,7 +46,7 @@ footer {
     font-size: 150px;
     text-transform: uppercase;
     animation: colorchange6 5s ease infinite alternate;
-    padding: 50px 50px;
+    padding: 0;
     justify-content: center;
     line-height: 1;
 }
@@ -56,7 +62,7 @@ footer {
     font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 2rem;
     font-weight: 500;
-    height: 150px;
+    height: 100%;
     width: 100%;
     padding: 0 24px;
     text-align: center;
@@ -96,7 +102,7 @@ footer {
     font-size: 25px;
 }
 
-.yashik {
+/* .yashik {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -104,7 +110,7 @@ footer {
     align-items: top;
     justify-content: center;
 
-}
+} */
 
 
 .CVETIK {
@@ -112,12 +118,14 @@ footer {
     text-align: center;
     width: 100%;
     display: flex;
+    flex: 1;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
 .CVETIK h1 {
+    margin: 0;
     font-family: 'NikkyouSans';
     font-size: 8rem;
     text-transform: uppercase;
