--- a/style.css
+++ b/style.css
@@ -153,43 +153,65 @@ footer {
 
 
 .modal {
-    display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
     top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start; 
+    align-items: center;
+    z-index: 99;
+    padding:30px 0;
+    visibility:hidden
+}
+
+
+.modal_window {
+    margin: 50px 0;
+    flex-shrink: 0;
+    flex-grow: 0;
+    background: #fff;
+    width: 600px;
+    max-width: 100%;
+    overflow: visible;
+    transition: transform 0.2s ease 0s, opacity 0.2s ease 0s;
+    transform: scale(0.9);
+    opacity: 0;
+}
+
+.tmodal-active{
+    visibility: visible;
+}
+.modal-active .modal_window{
+    transform: scale(1);
+    opacity: 1;
+}
+
+.modal_shadow{
+    position: fixed;
+    border:none;
+    display: block;
     width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 98;
+    opacity: 0;
+    transition: opacity 0.15s ease;
+    background-color: black;
 }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.modal_shadow-show{
+    pointer-events: auto;
+    opacity: 0.6;
 }
 
 .choise-name {
@@ -204,8 +226,6 @@ footer {
 }
 
 .name {
-    position: absolute;
-    top: 50%;
     margin:1em auto;
     cursor: pointer;  
     
